[package]
name = "tents_and_trees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.3.2"
rand = "0.8.5"
notan = { version = "0.12.0", features = ["egui", "log"] }
toml = "0.8.8"
serde = "1.0.195"
const_format = "0.2.32"
enum-map = "2.7.3"
once_cell = "1.19.0"